<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:background="@color/bg_blue">

        <LinearLayout
            android:id="@+id/forget_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingBottom="5dp"
            android:paddingRight="5dp"
            android:paddingTop="5dp">

            <ImageView
                android:layout_width="17dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="13dp"
                android:background="@mipmap/back"/>
        </LinearLayout>

        <com.rbu.lamphouse.widget.AppTextView
            android:id="@+id/login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/forget_password_title"
            android:textColor="@color/text_white"
            android:textSize="16sp"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <com.rbu.lamphouse.widget.AppEditText
            android:id="@+id/forget_email"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:paddingLeft="41dp"
            android:hint="@string/input_email"
            android:textColorHint="@color/bg_edit_gray"
            android:textSize="13sp"
            android:background="@drawable/bg_edittext"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="13dp"
            android:layout_marginLeft="48dp"
            android:layout_centerVertical="true"
            android:background="@mipmap/youxiang"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <com.rbu.lamphouse.widget.AppEditText
            android:id="@+id/forget_tkjn"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:paddingLeft="41dp"
            android:paddingRight="111dp"
            android:hint="@string/verification_code"
            android:textColorHint="@color/bg_edit_gray"
            android:textSize="13sp"
            android:background="@drawable/bg_edittext"/>

        <ImageView
            android:layout_width="16dp"
            android:layout_height="19dp"
            android:layout_marginLeft="48dp"
            android:layout_centerVertical="true"
            android:background="@mipmap/yangzhengma"/>

        <com.rbu.lamphouse.widget.AppButton
            android:id="@+id/forget_btn_tkjn"
            android:layout_width="100dp"
            android:layout_height="37dp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="36dp"
            android:text="@string/tkjn"
            android:textColor="@color/text_white"
            android:textSize="13sp"
            android:background="@color/bg_blue"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <com.rbu.lamphouse.widget.AppEditText
            android:id="@+id/forget_password"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:paddingLeft="41dp"
            android:inputType="textPassword"
            android:hint="@string/enter_password"
            android:textColorHint="@color/bg_edit_gray"
            android:textSize="13sp"
            android:background="@drawable/bg_edittext"/>

        <ImageView
            android:layout_width="18dp"
            android:layout_height="21dp"
            android:layout_marginLeft="48dp"
            android:layout_centerVertical="true"
            android:background="@mipmap/mima_1012"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <com.rbu.lamphouse.widget.AppEditText
            android:id="@+id/forget_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_marginLeft="36dp"
            android:layout_marginRight="36dp"
            android:paddingLeft="41dp"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"
            android:textColorHint="@color/bg_edit_gray"
            android:textSize="13sp"
            android:background="@drawable/bg_edittext"/>

        <ImageView
            android:layout_width="18dp"
            android:layout_height="21dp"
            android:layout_marginLeft="48dp"
            android:layout_centerVertical="true"
            android:background="@mipmap/mima_1012"/>
    </RelativeLayout>

    <com.rbu.lamphouse.widget.AppButton
        android:id="@+id/forget_btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_marginTop="54dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:text="@string/confirm"
        android:textColor="@color/text_white"
        android:textSize="13sp"
        android:background="@drawable/bg_button"/>

</LinearLayout>